@@ -1,3 +1,8 @@
+Sat Jul 16 22:42:10 CEST 2011
+	Change type of nonce to 'unsigned long int' to match return type
+	from 'strtoul'.  Fixes ERANGE check which would have previously
+	failed. -CG
+
 Wed Jul 13 09:26:17 CEST 2011
 	Fixing HTTP error status strings for certain high-numbered status codes.
 	Added support for some more (non-standard) status codes.
